--- a/css/styles.css
+++ b/css/styles.css
@@ -257,24 +257,20 @@ position: relative;
 /* -----------FEATURES---------------- */
 
 .features {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 120px 0;
 
 }
 
 .section-features {
-    /* padding: 120px 0; */
+    /* padding: 120px 0; не потрібне */
 }
 
-.features-image {
+/* .features-image {
 display: flex;
-gap: 24px;
+gap: 24px; зайве
 
-}
+} */
 
 .visually-hidden {
     position: absolute;
@@ -291,17 +287,19 @@ gap: 24px;
 
 .features-ul {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* gap: 24px; */
+    gap: 72px;
     
 }
 
 .features-list {
-    width: calc((100% - 3* 24px) / 4);
+    /* width: calc((100% - 3* 24px) / 4); пізніше знадобитьмся */
     
 }
 
 .box-icon {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     height: 112px;
@@ -315,15 +313,15 @@ gap: 24px;
 .features-subtitle {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    text-align: left;
+    text-align: center;
 }
 
 .features-text-p {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
