--- a/css/styles.css
+++ b/css/styles.css
@@ -257,8 +257,11 @@ position: relative;
 /* -----------FEATURES---------------- */
 
 .features {
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
-    padding: 120px 0;
+    padding: 96px 0;
 
 }
 
@@ -313,7 +316,7 @@ gap: 24px; зайве
 .features-subtitle {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
@@ -1104,6 +1107,16 @@ display: none;
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.features-ul {
+gap: 72px 24px;
+flex-direction: row;
+flex-wrap: wrap;
+}
+
+.features-list {
+    /* width: calc((100% - 24px) / 2);  */
 }
 
 }
