--- a/css/styles.css
+++ b/css/styles.css
@@ -303,13 +303,6 @@ gap: 24px; зайве
 
 .box-icon {
     display: none;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
 
 }
 
@@ -1100,9 +1093,25 @@ display: none;
 gap: 72px 24px;
 }
 
+
 .features-list {
-    width: calc((100% - 24px) / 2); 
+    width: calc((100% - 24px) / 2);
 }
+
+.features-subtitle {
+    text-align: left;
+}
+
+.features-text-p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #434455;
+}
+
+
 
 }
 
@@ -1124,10 +1133,27 @@ flex-direction: row;
 gap: 40px;
 }
 
+.box-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+
+}
+
 .address-link {
     font-size: 16px;
     line-height: 1.5;
     }
+
+   .features-list {
+    width: calc((100% - 3* 24px) / 4);
+   }
+
 }
 
 
