--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ position: relative;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding: 96px 0;
+    padding: 72px 0;
 
 }
 
@@ -459,6 +459,7 @@ width: 100%;
 /* -----------PORTFOLIO---------------- */
 
 .section-portfolio {
+    padding: 96px 0;
 /* padding-top: 120px;
     padding-bottom: 120px; */
 }
@@ -487,9 +488,11 @@ width: 100%;
 .portfolio-ul {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
-    row-gap: 48px;
+    gap: 48px;
+    /* gap: 24px;
+    row-gap: 48px; */
     /* width: calc((100% - 48px) / 3); */
+    width: 100%;
 }
 
 .features-list-li:hover {
@@ -499,7 +502,7 @@ box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
 }
 
 .features-list-li {
-    width: calc(100 - 2 * 24)/3;
+    /* width: calc(100 - 2 * 24)/3; */
     position: relative;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -513,8 +516,17 @@ box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
 
 .features-image {
     margin: 0 auto;
-    width: 360px;
+    width: 100%;
     display: block
+}
+
+.features-subtitle-portf {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2%;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        padding-top: 32px;
 }
 
 .features-cover-wrap {
@@ -545,6 +557,7 @@ overflow: hidden;
     border: 1px solid #e7e9fc;
     border-top: none;
     /* margin-bottom: 8px */
+    
 }
 
 
@@ -555,6 +568,7 @@ overflow: hidden;
     letter-spacing: 0.02em;
     text-align: left;
     color: #434455;
+    padding-top: 32px;
     
     /* padding-bottom: 32px;
     padding-top: 32px; */
@@ -1102,15 +1116,6 @@ gap: 72px 24px;
     text-align: left;
 }
 
-.features-text-p {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: #434455;
-}
-
 
 
 }
@@ -1150,9 +1155,17 @@ gap: 40px;
     line-height: 1.5;
     }
 
-   .features-list {
-    width: calc((100% - 3* 24px) / 4);
-   }
+.features-list {
+width: calc((100% - 3* 24px) / 4);
+}
+
+.portfolio-ul {
+gap: 48px 24px;
+}
+
+.features-list-li {
+width: calc(100 - 2 * 24)/3;
+}
 
 }
 
