--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 .header-navigation {
     display: flex;
     align-items: center;
-    
+
 }
 
 .header-logo {
@@ -202,9 +202,9 @@ position: relative;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/hero-people-office-1.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; 
+    background-size: cover;
     max-width: 1440px;
-    
+
 }
 
 .hero-container {
@@ -293,12 +293,12 @@ gap: 24px; зайве
     flex-wrap: wrap;
     /* gap: 24px; */
     gap: 72px;
-    
+
 }
 
 .features-list {
     /* width: calc((100% - 3* 24px) / 4); пізніше знадобитьмся */
-    
+
 }
 
 .box-icon {
@@ -339,10 +339,10 @@ gap: 24px; зайве
     background-color: #F4F4FD;
     text-transform: capitalize;
     color: #2e2f42;
-    padding: 72px 0;
-    width: 100%;
+    padding: 96px 0;
 
-    
+
+
 
 }
 
@@ -357,17 +357,20 @@ gap: 24px; зайве
     background-color: #F4F4FD;
     color: #2e2f42;
     margin-bottom: 72px;
+
 }
 
 .team-ul {
     display: flex;
     flex-wrap: wrap;
     gap: 72px;
+    max-width: 100%;
+    justify-content: center;
     /* column-gap: 24px;
     row-gap: 48px;
     gap: 24px; */
-    
-    
+
+
 }
 
 .team-list {
@@ -375,14 +378,15 @@ gap: 24px; зайве
     border-radius: 0px 0px 4px 4px;
     /* width: calc((100% - 3 * 24px)/4); */
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    width: 100%;
+    /* width: 320px; */
 }
 
 
 .team-image {
     margin-bottom: 32px;
     margin: 0 auto;
-    width: 264px;
+    max-width: 100%;
+    height: auto;
     display: block
 }
 
@@ -416,7 +420,7 @@ padding: 32px 0;
         justify-content: center;
     /* margin-top: 8px */
     /* margin-bottom: 32px;
-    margin-left: 16px; */ 
+    margin-left: 16px; */
 }
 
 .team-link:hover {
@@ -433,7 +437,7 @@ justify-content: center;
 gap: 24px;
 width: 100%;
 padding-top: 8px;
-    
+
 }
 
 .team-social-item {
@@ -445,14 +449,14 @@ padding-top: 8px;
     align-items: center;
     justify-content: center;
     gap: 24px;
-    
+
     }
 
 .team-link {
 width: 100%;
     height: 100%;
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     justify-content: center;
     border-radius: 50%;
     background-color: #4d5ae5;
@@ -519,7 +523,7 @@ box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
 
 .features-list-li:hover .features-cover-text {
     transform: translateY(0);
-    
+
 }
 
 
@@ -540,7 +544,7 @@ box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
 
 .features-cover-wrap {
 position: relative;
-overflow: hidden; 
+overflow: hidden;
 
 }
 
@@ -557,8 +561,8 @@ overflow: hidden;
         transform: translateY(100%);
         height: 100%;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-        
+
+
 }
 
 .app-name {
@@ -566,7 +570,7 @@ overflow: hidden;
     border: 1px solid #e7e9fc;
     border-top: none;
     /* margin-bottom: 8px */
-    
+
 }
 
 
@@ -578,7 +582,7 @@ overflow: hidden;
     text-align: left;
     color: #434455;
     padding-top: 32px;
-    
+
     /* padding-bottom: 32px;
     padding-top: 32px; */
 }
@@ -592,8 +596,8 @@ overflow: hidden;
     padding: 100px 0;
     background-color: #2e2f42;
     display: flex;
-    
-    
+
+
 }
 
 .footer-container {
@@ -603,7 +607,7 @@ overflow: hidden;
 }
 
 .box-footer-logo {
-margin-right: 120px;
+    margin-right: 120px;
 
 }
 
@@ -617,7 +621,7 @@ margin-right: 120px;
     color: #4d5ae5;
     margin-bottom: 16px;
     display: inline-block;
-    
+
 }
 
 .footer-logo-color {
@@ -639,16 +643,16 @@ margin-right: 120px;
 }
 
 .box-footer-social {
- display: flex;
- flex-direction: column;
- align-items: start;
- justify-content: center;
- margin-right: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    margin-right: 80px;
 
 }
 
 .footer-social-text {
-font-weight: 500;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -658,8 +662,7 @@ font-weight: 500;
 }
 
 
-.address-footer {
-}
+.address-footer {}
 
 .address-footer-list {
     display: flex;
@@ -700,12 +703,12 @@ font-weight: 500;
 }
 
 .subscribe-text {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #FFF;
-margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFF;
+    margin-bottom: 16px;
 }
 
 .footer-form {
@@ -715,9 +718,7 @@ margin-bottom: 16px;
 
 .footer-form-wrap {}
 
-.footer-label {
-
-}
+.footer-label {}
 
 .footer-input {
     border: 1px solid #fff;
@@ -767,7 +768,7 @@ margin-bottom: 16px;
 
 .footer-form-btn:hover,
 .footer-form-btn:focus {
-background: #404bbf;
+    background: #404bbf;
 }
 
 .subscribe-icon {
@@ -884,7 +885,7 @@ margin-bottom: 24px;
 
 .modal-field-wrap {
     position: relative;
-    
+
 }
 
 .modal-input {
@@ -931,7 +932,7 @@ margin-bottom: 24px;
 }
 
 .modal-icon-svg {
-    
+
 }
 
 .modal-field-comment {
@@ -995,7 +996,7 @@ margin-bottom: 16px
     background-color: #404bbf;
     fill: #f4f4fd;
     border: none;
-    
+
 
 }
 
@@ -1126,9 +1127,16 @@ gap: 72px 24px;
 }
 
 
+
 .team-ul {
 gap: 64px 24px;
 }
+
+.team-ul .container {
+    margin: 0 108px;
+}
+
+
 
 .team-list {
     width: calc((100% - 24px)/2);
@@ -1184,6 +1192,7 @@ width: calc(100 - 2 * 24)/3;
 
 .team-ul {
     gap: 24px;
+    flex-wrap: wrap;
 }
 
 .team-list {
