--- a/css/styles.css
+++ b/css/styles.css
@@ -592,8 +592,10 @@ overflow: hidden;
 /* -----------FOOTER---------------- */
 
 .footer {
-    padding-top: 120px;
-    padding: 100px 0;
+    /* padding-top: 120px; */
+    padding-top: 96px;
+    padding-bottom: 72px;
+    /* padding: 100px 0; */
     background-color: #2e2f42;
     display: flex;
 
@@ -603,11 +605,19 @@ overflow: hidden;
 .footer-container {
     display: flex;
     align-items: baseline;
+
     /* padding: 100px 1020px 100px 156px; */
+    flex-wrap: wrap;
+    max-width: 100%;
 }
 
 .box-footer-logo {
-    margin-right: 120px;
+    /* margin-right: 120px; */
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+    align-items: center;
+    
 
 }
 
@@ -621,6 +631,11 @@ overflow: hidden;
     color: #4d5ae5;
     margin-bottom: 16px;
     display: inline-block;
+    width: 100%;
+    padding-left: 86px;
+    padding-right: 86px;
+    
+    
 
 }
 
@@ -645,11 +660,17 @@ overflow: hidden;
 .box-footer-social {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    /* align-items: start; */
+    align-items: center;
     justify-content: center;
-    margin-right: 80px;
+    /* margin-right: 80px; */
+    margin: 72px 0;
+    max-width: 100%;
+    }
 
-}
+  .box-footer-social .container {
+    width: 208px;
+  }
 
 .footer-social-text {
     font-weight: 500;
@@ -667,6 +688,9 @@ overflow: hidden;
 .address-footer-list {
     display: flex;
     gap: 16px;
+    padding-right: 56px;
+    padding-left: 56px;
+
 }
 
 .address-footer-item {
@@ -700,6 +724,9 @@ overflow: hidden;
 
 .footer-subscribe {
     display: block;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .subscribe-text {
@@ -709,11 +736,15 @@ overflow: hidden;
     letter-spacing: 0.02em;
     color: #FFF;
     margin-bottom: 16px;
+    padding: 0 106px;    
 }
 
 .footer-form {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* gap: 24px; */
+    gap: 16px;
+
 }
 
 .footer-form-wrap {}
@@ -723,7 +754,8 @@ overflow: hidden;
 .footer-input {
     border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
+    /* width: 264px; */
+    width: 288px;
     height: 40px;
     background: #2e2f42;
     outline: transparent;
@@ -764,6 +796,7 @@ overflow: hidden;
     border: none;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 71px;
 }
 
 .footer-form-btn:hover,
