--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ overflow: hidden;
 .footer {
     /* padding-top: 120px; */
     padding-top: 96px;
-    padding-bottom: 72px;
+    pading-bottom: 72px;
     /* padding: 100px 0; */
     background-color: #2e2f42;
     display: flex;
