--- a/css/styles.css
+++ b/css/styles.css
@@ -197,13 +197,15 @@ position: relative;
 
 .hero {
     margin: 0 auto;
-    padding: 188px 0;
+    padding: 72px 0;
+    /* padding: 188px 0; */
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/hero-people-office-1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
+    /* max-width: 1440px; */
+    max-width: 100%;
 
 }
 
@@ -213,14 +215,18 @@ position: relative;
 
 .hero-title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     color: #fff;
-    margin-bottom: 48px;
-    max-width: 496px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-bottom: 72px;
+    max-width: 100%;
+    text-align: center;
+    padding-left: 52px;
+    padding-right: 52px;
+    /* margin: 0 56; */
+    /* margin-left: auto;
+    margin-right: auto; */
 
 }
 
