--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ overflow: hidden;
 .footer {
     /* padding-top: 120px; */
     padding-top: 96px;
-    pading-bottom: 72px;
+    padding-bottom: 72px;
     /* padding: 100px 0; */
     background-color: #2e2f42;
     display: flex;
@@ -1155,6 +1155,18 @@ display: none;
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero {
+    padding: 112px 0;
+}
+
+.hero-title {
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-bottom: 36px;
+    font-size: 56px;
+    line-height: 1.07;
 }
 
 .features-ul {
