--- a/css/styles.css
+++ b/css/styles.css
@@ -670,7 +670,7 @@ overflow: hidden;
     align-items: center;
     justify-content: center;
     /* margin-right: 80px; */
-    padding: 72px 0;
+    padding: auto 0;
     width: 208px;
     margin: 0 auto;
     }
