--- a/css/styles.css
+++ b/css/styles.css
@@ -200,13 +200,30 @@ position: relative;
     padding: 72px 0;
     /* padding: 188px 0; */
     background-color: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/hero-people-office-1.jpg);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     /* max-width: 1440px; */
     max-width: 100%;
+    height: auto;
+}
 
+@media screen and (-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 2dppx),
+(min-resolution: 192dpi) {
+
+    .hero {
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg-mob-2x.jpg);
+    }
 }
 
 .hero-container {
@@ -1095,6 +1112,29 @@ background: #404bbf;
 max-width: 768px;
 }
 
+.hero {
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg-tab.jpg);
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 192dpi) {
+
+.hero {
+background-image: linear-gradient(
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)
+),
+url(../images/hero-bg-tab-2x.jpg);
+    }
+}
+
+
+
 .header-logo {
     margin-right: 120px;
 }
@@ -1158,6 +1198,7 @@ display: none;
 }
 
 .hero {
+    max-width: 100%;
     padding: 112px 0;
 }
 
@@ -1266,6 +1307,35 @@ gap: 40px;
     font-size: 16px;
     line-height: 1.5;
     }
+
+.hero {
+    max-width: 100%;
+    padding: 188px 0;
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7), 
+    rgba(46, 47, 66, 0.7)
+    ), 
+    url(../images/hero-bg-desk.jpg);
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 192dpi) {
+
+.hero {
+background-image: linear-gradient(
+rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)
+),
+url(../images/hero-bg-desk-2x.jpg);
+    }
+}
+
+.hero-title {
+    padding-left: 316px;
+    padding-right: 316px;
+}
+
 
 .features-list {
 width: calc((100% - 3* 24px) / 4);
