--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,152 @@ position: relative;
     border: none;
 }
 
+
+/* ----------------mob-menu--------------- */
+
+.mob-menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    
+}
+
+.mob-close-btn {
+position: absolute;
+display: flex;
+/* display: block;
+margin-left: auto; */
+background-color: transparent;
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 100%;
+padding: 0;
+cursor: pointer;
+border: 1px solid rgba(0, 0, 0, 0.1);
+background-color: #fcfcfc;
+justify-content: center;
+align-items: center;
+transition: background-color 250ms 
+cubic-bezier(0.4, 0, 0.2, 1), border 250ms 
+cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-close-btn:hover,
+.mob-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.mob-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+.mob-close-btn:hover > .mob-close-icon,
+.mob-close-btn:focus > .mob-close-icon {
+        fill: #e7e9fc;    
+        }
+
+.open-mob-menu {
+    display: flex;
+    margin-left: 16px;
+    margin-top: 72px;
+    
+}
+
+.mob-menu-ul {}
+
+.mob-menu-list:not(:last-child) {
+margin-bottom: 40px;
+}
+
+.mob-menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.mob-menu-link:hover, 
+.mob-menu-link:focus {
+color: #404bbf;
+}
+
+.mob-address-box {
+margin-top: auto;
+}
+
+.mob-address {
+    margin-left: 16px;
+}
+
+
+
+.address-mob-menu {
+
+}
+
+.address-mob-list {
+    padding-bottom: 24px;
+}
+
+.address-mob-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mob-social-list {
+display: flex;
+justify-content: center;
+gap: 40px;
+width: 100%;
+padding-top: 8px;
+margin-bottom: 40px;
+}
+
+.mob-social-item {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.mob-link {
+    width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: #4d5ae5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-link:hover, 
+.mob-link:focus {
+    background-color: #404bbf;
+}
+
+.mob-social-icon {}
+
 /* ------------------ */
 
 /* --------HERO--------- */
@@ -262,7 +408,7 @@ background-image: linear-gradient(
     padding: 16px 32px;
     margin: 0 auto;
     display: block;
-    min-width: 169px;
+    max-width: 169px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
@@ -688,7 +834,7 @@ overflow: hidden;
     justify-content: center;
     /* margin-right: 80px; */
     padding: auto 0;
-    width: 208px;
+    max-width: 208px;
     margin: 0 auto;
     }
 
@@ -1315,7 +1461,7 @@ background-image: linear-gradient(
     rgba(46, 47, 66, 0.7), 
     rgba(46, 47, 66, 0.7)
     ), 
-    url(../images/hero-bg-desk.jpg);
+    url(../images/hero-people-office-1.jpg);
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
