--- a/css/styles.css
+++ b/css/styles.css
@@ -1013,15 +1013,19 @@ justify-content: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
+    /* width: 408px;
+    min-height: 584px; */
     background-color: #fcfcfc;
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     padding-top: 72px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 16px;
+    padding-right: 16px;
+    /* padding-left: 24px;
+    padding-right: 24px; */
     padding-bottom: 24px;
 }
 
@@ -1415,7 +1419,12 @@ margin-left: 24px;
     gap: 24px;
 }
 
-
+.modal {
+width: 408px;
+min-height: 584px;
+padding-left: 24px;
+padding-right: 24px;
+}
 
 }
 
