--- a/css/styles.css
+++ b/css/styles.css
@@ -408,7 +408,7 @@ background-image: linear-gradient(
     padding: 16px 32px;
     margin: 0 auto;
     display: block;
-    max-width: 169px;
+    min-width: 169px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
