--- a/css/styles.css
+++ b/css/styles.css
@@ -686,7 +686,7 @@ gap: 24px; зайве
 }
 
 .features-list-li {
-    /* width: calc(100 - 2 * 24)/3; */
+    /* width: calc((100% - 2 * 24px)/3); */
     position: relative;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -1365,6 +1365,14 @@ color: #4d5ae5;
         text-align: left;
     }
 
+    .portfolio-ul {
+        gap: 72px 24px;
+    }
+
+    .features-list-li {
+        width: calc((100% - 24px) / 2);
+    }
+
 
 
     .team-ul {
@@ -1386,7 +1394,7 @@ color: #4d5ae5;
     }
 
     .footer-container {
-        padding-left: 92px;
+        width: 584px;
     }
 
     .footer-logo {
