--- a/css/styles.css
+++ b/css/styles.css
@@ -1488,8 +1488,14 @@ color: #4d5ae5;
     }
 
 
+
     .features-list {
         width: calc((100% - 3* 24px) / 4);
+    }
+
+    .features-subtitle {
+        font-size: 20px;
+        line-height: 1.2;
     }
 
     .features-list-li {
