--- a/css/styles.css
+++ b/css/styles.css
@@ -1488,7 +1488,6 @@ color: #4d5ae5;
     }
 
 
-
     .features-list {
         width: calc((100% - 3* 24px) / 4);
     }
@@ -1498,8 +1497,12 @@ color: #4d5ae5;
         line-height: 1.2;
     }
 
+        .portfolio-ul {
+            gap: 48px 24px;
+        }
+
     .features-list-li {
-        width: calc(100 - 2 * 24)/3;
+        width: calc((100% - 2 * 24px)/3);
     }
 
     .team {
