--- a/css/styles.css
+++ b/css/styles.css
@@ -1524,21 +1524,36 @@ color: #4d5ae5;
 
     .footer {
         padding-top: 100px;
+        padding-bottom: 100px;
         justify-content: space-around;
 
     }
 
     .footer-container {
         flex-wrap: nowrap;
+        width: 1127px;
     }
 
     .box-footer-logo {
-        padding-right: 120px;
+        margin-right: 120px;
         max-width: 100%;
     }
+
+        .footer-text {
+            width: 264px;
+        }
 
     .box-footer-social {
         margin-right: 80px;
     }
 
+        .footer-form {
+            width: 453px;
+        }
+
+.footer-input {
+width: 264px;
+        }
+    
 }
+
